--- a/style.css
+++ b/style.css
@@ -38,45 +38,40 @@
 }
 
 .container {
-    position: absolute;
-    padding: 0;
-    margin: 0;
+    padding: 12px 24px!important;
 
-    top: 0;
-    left: 0;
-
-    width: 100%;
-    height: 100%;
-
-    background-color: tan;
+    background-color: black;
 }
 
 .home {
-    
+    padding-top: 255px;
+    padding-bottom: 258px;
 }
 
 .name {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
 }
 
 .title {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #818181;
 }
 
 .about {
-    margin-left: 10px;
+    color: white;
 }
 
-.portfolio {
-    margin-left: 10px;
+.projects {
+    color: white;
 }
 
 .contact {
-    margin-left: 10px;
+    color: white;
 }
 
 .topic {
@@ -84,10 +79,10 @@
 }
 
 .line {
-    width:100px; 
+    width: 100px; 
     height: 2px;
     margin-left: 0;
     border-width: 0;
-    color:#111;
-    background-color: #111;
+    color: white;
+    background-color: white;
 }
