Changed styling and made it a SPA

--- a/portfolio/src/styles/App.css
+++ b/portfolio/src/styles/App.css
@@ -1,6 +1,7 @@
 #sidebar nav {
-  flex: 1;
-  background-color: #4ABDAC;
+  display: flex;
+  justify-content: space-between;
+  background-color: #946183;
   flex-direction: row;
   overflow: auto;
   /* padding-top: 1rem; */
@@ -17,7 +18,7 @@
 
 #sidebar nav a {
   display: block;
-  color: black;
+  color: #f4decb;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -25,33 +26,18 @@
 
 /* The color when cursor hovers over */
 #sidebar nav a:hover {
-  background: #F7B733;
-}
-
-#sidebar nav a.active {
-  background: hsl(224, 98%, 58%);
-  color: white;
-}
-
-#sidebar nav a.pending {
-  color: hsl(224, 98%, 58%);
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  background: #49274a;
 }
 
 #appHeader {
-  background-color: #4ABDAC;
+  background-color: #f4decb;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #565656;
   margin-top: 0;
   margin-bottom: 0;
 }
