--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,4 +1,4 @@
-#aboutPage {
+#homePage {
     background-color: #f4decb;
     min-height: 100vh;
     display: flex;
@@ -15,25 +15,12 @@
     opacity: 0;
     /* Initially hidden */
     transition: opacity 0.5s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #fadeIn.is-visible {
     opacity: 1;
-}
-
-#aboutMe {
-    display: flex;
-    flex-direction: row;
-    padding-left: 5%;
-    padding-right: 5%;
-}
-
-@media (max-width: 600px) {
-    #aboutPage {
-        flex-direction: column;
-    }
-
-    #aboutMe {
-        flex-direction: column;
-    }
 }
