--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -48,6 +48,13 @@
     display: flex;
     flex-direction: row;
     margin-bottom: 40px;
+    opacity: 0;
+    /* Initially hidden */
+    transition: opacity 0.5s ease-in-out;
+}
+
+#projectCardRow.is-visible {
+    opacity: 1;
 }
 
 #projectCardMargins {
