--- a/src/styles/ProjectPages.css
+++ b/src/styles/ProjectPages.css
@@ -1,10 +1,10 @@
 #appHeader {
-    background-color: #f4decb;
+    background-color: #cee4e4;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     font-size: calc(15px + 2vmin);
-    color: #565656;
+    color: #131200;
     margin-top: 0;
     padding-top: 0;
     margin-bottom: 0;
