--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,12 +1,12 @@
 #Projects {
-    background-color: #f4decb;
+    background-color: #cee4e4;
     overflow: auto;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: calc(10px + 2vmin);
-    color: #565656;
+    color: #131200;
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -19,7 +19,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #f8eee7;
+    background-color: #F2F8F8;
 }
 
 #projectButton {
