--- a/src/styles/ProjectPages.css
+++ b/src/styles/ProjectPages.css
@@ -3,17 +3,26 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    font-size: calc(15px + 2vmin);
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
     color: #131200;
     margin-top: 0;
-    padding-top: 0;
     margin-bottom: 0;
 }
 
 #projectDescription {
-    width: 80%;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    width: 90%;
+}
+
+#projectImage {
+    display: flex;
+    align-items: center;
+    width: 30%;
+    height: auto;
 }
 
 #fadeIn.is-visible {
@@ -23,5 +32,11 @@
 @media (max-width: 600px) {
     #projectDescription {
         flex-direction: column;
+        align-items: center;
+    }
+
+    #projectImage {
+        width: 70%;
+        height: auto;
     }
 }
