--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -15,6 +15,7 @@
     display: flex;
     width: 100%;
     height: 100%;
+    border-radius: 10px;
     /* min-height: 40vh; */
     flex-direction: column;
     align-items: center;
@@ -25,6 +26,7 @@
 #projectButton {
     background: none;
     border: none;
+    border-radius: 10px;
     padding: 0;
     margin: 0;
     width: 60vh;
